arreglo del html

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<style type="text/css">
 		@font-face {
 			font-family: 'tarjeta';
-			src: url('src/halterp_.ttf')
+			src: url('src/halter.ttf')
 			format('truetype');
 		}
 
