--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Tarjeta de credito</title>
+	<title>Tarjeta de credito OTRO TITULO</title>
 	<meta charset="utf-8">
 	<style type="text/css">
 		@font-face {
